// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for size: inherit 1`] = `
":host {
  position: relative;
  display: inline-block;
  vertical-align: top;
  max-width: 100% !important;
  max-height: 100% !important;
  box-sizing: content-box !important;
}
:host([hidden]) {
  display: none !important;
}
a {
  all: unset;
  display: block;
  max-width: 100%;
  max-height: 100%;
  height: inherit;
  cursor: pointer;
}
a::before {
  content: "";
  position: absolute;
  inset: 0;
  border-radius: 1px;
}
a:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
svg {
  display: block;
  max-width: 100%;
  max-height: 100%;
  height: inherit;
  fill: var(--p-color-primary);
}"
`;

exports[`getComponentCss() > should return correct css for size: inherit 2`] = `
":host {
  position: relative;
  display: inline-block;
  vertical-align: top;
  max-width: 100% !important;
  max-height: 100% !important;
  box-sizing: content-box !important;
}
:host([hidden]) {
  display: none !important;
}
a {
  all: unset;
  display: block;
  max-width: 100%;
  max-height: 100%;
  height: inherit;
  cursor: pointer;
}
a::before {
  content: "";
  position: absolute;
  inset: 0;
  border-radius: 1px;
}
a:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
svg {
  display: block;
  max-width: 100%;
  max-height: 100%;
  height: inherit;
  fill: var(--p-color-primary);
}"
`;

exports[`getComponentCss() > should return correct css for size: small 1`] = `
":host {
  position: relative;
  display: inline-block;
  vertical-align: top;
  max-width: 100% !important;
  max-height: 100% !important;
  box-sizing: content-box !important;
  height: clamp(0.63rem, 0.42vw + 0.5rem, 1rem) !important;
}
:host([hidden]) {
  display: none !important;
}
a {
  all: unset;
  display: block;
  max-width: 100%;
  max-height: 100%;
  height: inherit;
  cursor: pointer;
}
a::before {
  content: "";
  position: absolute;
  inset: 0;
  border-radius: 1px;
}
a:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
svg {
  display: block;
  max-width: 100%;
  max-height: 100%;
  height: inherit;
  fill: var(--p-color-primary);
}
@supports (height: round(down, 1px, 1px)) {
  :host {
    height: round(down, clamp(0.63rem, 0.42vw + 0.5rem, 1rem), 1px) !important;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for size: small 2`] = `
":host {
  position: relative;
  display: inline-block;
  vertical-align: top;
  max-width: 100% !important;
  max-height: 100% !important;
  box-sizing: content-box !important;
  height: clamp(0.63rem, 0.42vw + 0.5rem, 1rem) !important;
}
:host([hidden]) {
  display: none !important;
}
a {
  all: unset;
  display: block;
  max-width: 100%;
  max-height: 100%;
  height: inherit;
  cursor: pointer;
}
a::before {
  content: "";
  position: absolute;
  inset: 0;
  border-radius: 1px;
}
a:focus-visible::before {
  outline: 2px solid var(--p-color-focus);
  outline-offset: 2px;
}
svg {
  display: block;
  max-width: 100%;
  max-height: 100%;
  height: inherit;
  fill: var(--p-color-primary);
}
@supports (height: round(down, 1px, 1px)) {
  :host {
    height: round(down, clamp(0.63rem, 0.42vw + 0.5rem, 1rem), 1px) !important;
  }
}
"
`;
